--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "check": "eslint . && prettier src --write",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-three/fiber": "^9.4.0",
     "@types/three": "^0.181.0",
+    "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "three": "^0.181.0"
