--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.1.1",
     "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.17",
-    "three": "^0.181.0"
+    "three": "^0.181.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
